--- a/materialize/css/main.css
+++ b/materialize/css/main.css
@@ -1,22 +1,51 @@
-head{
-  overflow: hidden;
-}
-.content{
-  text-align: center;
-}
-
 li {
   list-style: none;
 }
 
-.imf1 {
-  position: fixed;
-  transform: translateX(-7.8%);
-  z-index: -1;
+a, p, h1, h2, h3, h4, h5, h6 {
+  font-family: 'Open Sans', sans-serif !important;
+}
+
+body>div:nth-child(1) {
+  overflow: hidden;
+}
+
+.imgfondo {
+  position: relative;
+  background: url(../../assets/hero-min.jpg) center center no-repeat;
+  min-block-size: 750px;
+  background-size: cover;
+  width: 100%;
+  z-index: 999;
+}
+
+header nav>div>div:nth-child(3)>ul:nth-child(1)>li:nth-child(1) {
+  margin: 0 0 0 25px;
+  padding: 0;
+}
+
+header nav>div>div:nth-child(3)>ul:nth-child(2)>li:nth-child(1) {
+  position: relative;
+  top: 5px;
+}
+
+header nav>div>div:nth-child(3)>ul:nth-child(2) {
+  width: auto !important;
 }
 
 nav {
-  width: 86.6%;
+  position: fixed;
+  left: 0;
+  right: 0;
+  transition: all .3s ease-in-out;
+}
+
+nav>.section {
+  margin-bottom: 0px;
+  padding-bottom: 27px;
+  width: 1168.22px;
+  border-bottom: solid 1px rgba(255, 255, 255, 0.215);
+  transition: all .3s ease-in-out;
 }
 
 nav .brand-logo {
@@ -32,41 +61,58 @@ nav ul a {
   font-weight: 300;
 }
 
+nav ul a.btn {
+  margin: 0 !important;
+}
+
 h6 {
-  font-size: 1.45rem;
+  font-size: 1.35rem;
+}
+
+.sidenav {
+  display: none;
 }
 
 .divv {
-  padding-top: 5%;
+  padding-top: 15%;
+}
+
+.btn {
+  border-radius: 40px;
 }
 
 .btn-large {
   border-radius: 40px;
-  border-color: #e91e63;
+  border-color: #ec407a;
   font-size: 13px;
   line-height: 1.6;
   padding: 15px 40px;
 }
-.sectiona{
+
+.sectiona {
   padding: 90px 10px;
 }
-.btn-large1:hover,.activebl{
-  background-color: #e91e63 !important;
-  border-color: #e91e63 ;
+
+.btn-large1:hover, .activebl {
+  background-color: #ee3270 !important;
+  border-color: #ee3270;
 }
 
-.btn-large2:hover,.activebl{
-  border-color: #e91e63 !important;
-  background-color: #e91e63 !important;
+.btn-large2:hover, .activebl {
+  border-color: #ec407a !important;
+  background-color: #ec407a !important;
   color: #e0e0e0 !important;
 }
 
-.btn smally {
+.btn-smally {
   padding: 8px 40px;
 }
 
+.btn-smally2 {
+  border-color: #ec407a !important;
+}
+
 .acolor {
-  border-radius: 40px;
   transition: all .15s 0s linear;
 }
 
@@ -75,17 +121,154 @@ h6 {
   border-color: #e91e63 !important;
 }
 
-header nav>div>div:nth-child(3)>ul>li:nth-child(1) {
-  position: relative;
-  top: 33px;
-}
-div:nth-child(4){
+div:nth-child(4) {
   position: relative;
 }
+
+.diarrow {
+  position: absolute;
+  bottom: 30px;
+  left: 50%;
+  margin: auto;
+  animation-name: animatearrow;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+}
+
+nav .sidenav-trigger {
+  left: 75%;
+  transform: scale(2.5, 2.4);
+}
+
+.diarrow .material-icons {
+  transform: scale(1.4) rotate(-90deg) !important;
+}
+
+#pading {
+  padding: 120px 100px;
+}
+
+#pading section, #pading article, #pading p {
+  padding: 0;
+  margin: 0;
+}
+
+#pading p:nth-child(2) {
+  line-height: 2;
+  margin: 10px 0;
+  font-size: 15px;
+  font-weight: 500;
+}
+
+nav div a span {
+  position: relative;
+  top: 25px;
+  width: 15px;
+  height: 2px;
+  margin-bottom: 3px;
+  background-color: white;
+  display: block !important;
+}
+
+.nav-scroll {
+  width: 100%;
+  background-color: #232731 !important;
+  z-index: 9;
+}
+
+.nav-scroll>.section {
+  border-bottom: none;
+  padding: 13px 0 17px 0;
+}
+
+.content-iphones {
+  padding: 120px 0;
+  height: 760px;
+  overflow: hidden;
+}
+
+div div:nth-child(3)>section:nth-child(1) {
+  position: relative;
+}
+
+div:nth-child(3) section:nth-child(1) div:nth-child(1) {
+  position: relative;
+  right: 185px;
+  top: 6px;
+  width: 706px;
+  height: 1002px;
+  background: url(../../assets/ipad-device.png) center center no-repeat;
+  z-index: 1;
+}
+
+div:nth-child(3) section:nth-child(1) div:nth-child(2) {
+  width: 304px;
+  height: 620px;
+  background: url(../../assets/iphone6.png) center center no-repeat;
+  position: absolute;
+  left: 344px;
+  bottom: 129px;
+  z-index: 2;
+}
+
+div:nth-child(5) div section {
+  width: 1170px;
+}
+
+div:nth-child(5) section:nth-child(2) {
+  margin-bottom: 120px;
+}
+
+div:nth-child(6) div section p {
+  font-weight: 300;
+  line-height: 27px;
+}
+
+div:nth-child(6) div article1 {
+  position: relative;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+.sectionmackbook {
+  position: relative;
+  width: 916px;
+  height: 540px;
+  background: url(../../assets/macbook-pro.png) center center no-repeat;
+  top: 14px;
+  z-index: 4;
+  left: 50%;
+}
+
+.div-padding {
+  padding: 120px 0;
+  width: 1170px;
+  margin: 0 auto;
+}
+
+.div-padding section div p {
+  line-height: 29px;
+}
+
 @media only screen and (max-width: 992px) {
   nav .brand-logo {
     left: 50%;
     -webkit-transform: translateX(0%);
     transform: translateX(0%);
+  }
+  #pading {
+    padding-left: 12px;
+  }
+}
+
+@keyframes animatearrow {
+  from, to {
+    -webkit-transform: translate(-50%, 0);
+    transform: translate(-50%, 0)
+  }
+  65% {
+    -webkit-transform: translate(-50%, 15px);
+    transform: translate(-50%, 15px)
   }
 }
