--- a/materialize/css/main.css
+++ b/materialize/css/main.css
@@ -6,16 +6,49 @@ a, p, h1, h2, h3, h4, h5, h6 {
   font-family: 'Open Sans', sans-serif !important;
 }
 
+h2, h3, h5 {
+  color: rgb(71, 78, 93);
+}
+
+p {
+  padding-bottom: 20px;
+  margin: 0 0 10px;
+  font-size: 15px;
+  line-height: 29px;
+  color: rgba(39, 62, 88, 0.794);
+  font-weight: 300;
+}
+
+h2 {
+  font-size: 40px;
+  margin-bottom: 20px;
+}
+
+h3 {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+h5 {
+  font-size: 15px;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+h6 {
+  font-size: 1.35rem;
+}
+
 body>div:nth-child(1) {
   overflow: hidden;
 }
 
 .imgfondo {
   position: relative;
-  background: url(../../assets/hero-min.jpg) center center no-repeat;
+  width: 100%;
   min-block-size: 750px;
   background-size: cover;
-  width: 100%;
+  background: url(../../assets/hero-min.jpg) center center no-repeat;
   z-index: 999;
 }
 
@@ -65,10 +98,6 @@ nav ul a.btn {
   margin: 0 !important;
 }
 
-h6 {
-  font-size: 1.35rem;
-}
-
 .sidenav {
   display: none;
 }
@@ -106,6 +135,7 @@ h6 {
 
 .btn-smally {
   padding: 8px 40px;
+  line-height: 16px;
 }
 
 .btn-smally2 {
@@ -121,7 +151,7 @@ h6 {
   border-color: #e91e63 !important;
 }
 
-div:nth-child(4) {
+.posi {
   position: relative;
 }
 
@@ -187,14 +217,14 @@ nav div a span {
   overflow: hidden;
 }
 
-div div:nth-child(3)>section:nth-child(1) {
+div:nth-child(3)>section:nth-child(1) {
   position: relative;
 }
 
 div:nth-child(3) section:nth-child(1) div:nth-child(1) {
   position: relative;
-  right: 185px;
   top: 6px;
+  right: 185px;
   width: 706px;
   height: 1002px;
   background: url(../../assets/ipad-device.png) center center no-repeat;
@@ -202,13 +232,18 @@ div:nth-child(3) section:nth-child(1) div:nth-child(1) {
 }
 
 div:nth-child(3) section:nth-child(1) div:nth-child(2) {
-  width: 304px;
-  height: 620px;
-  background: url(../../assets/iphone6.png) center center no-repeat;
   position: absolute;
   left: 344px;
   bottom: 129px;
+  width: 304px;
+  height: 620px;
+  background: url(../../assets/iphone6.png) center center no-repeat;
   z-index: 2;
+}
+
+div:nth-child(3) section article {
+  margin-bottom: 0;
+  border-bottom: solid 1px rgba(218, 221, 221, 0.705);
 }
 
 div:nth-child(5) div section {
@@ -232,23 +267,395 @@ div:nth-child(6) div article1 {
 }
 
 .sectionmackbook {
-  position: relative;
+  position: absolute;
+  top: 114px;
+  left: 50%;
   width: 916px;
   height: 540px;
   background: url(../../assets/macbook-pro.png) center center no-repeat;
-  top: 14px;
   z-index: 4;
-  left: 50%;
+}
+
+.img_s {
+  position: relative;
+}
+
+.img_s img {}
+
+.content-iphones .container h3 {
+  margin: 0 0 20px;
+}
+
+.div-padding section.row .btn {
+  margin-top: 20px;
 }
 
 .div-padding {
-  padding: 120px 0;
+  padding: 120px 0 71px 0;
   width: 1170px;
   margin: 0 auto;
 }
 
-.div-padding section div p {
+.div-padding section div {
   line-height: 29px;
+}
+
+.div6 {
+  position: relative;
+  padding-top: 120px;
+  padding-bottom: 190px;
+  margin-top: 120px;
+  background: url(../../assets/polygonal-bg.jpg) center center no-repeat;
+}
+
+.div6 section:nth-child(2) {
+  position: absolute;
+}
+
+.div6 section:nth-child(2) span img {
+  position: relative;
+  top: 45px;
+  left: 71.5%;
+  animation-name: animatediamond;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+}
+
+.div6 section h2 {
+  margin: 0 0 20px;
+}
+
+header div:nth-child(2) h6, .div6 section h2 {
+  font-weight: 300;
+}
+
+div div:nth-child(5) .threeArr {
+  position: relative;
+  bottom: 20px;
+  margin-right: 8px;
+  font-family: sans-serif;
+  font-size: 25px;
+  color: rgba(246, 147, 65, 0.918);
+}
+
+.paddingright {
+  padding-right: 100px;
+  border-right: solid 1px rgb(212, 216, 214);
+}
+
+.paddingleft {
+  padding-left: 100px;
+}
+
+div div:nth-child(7) {
+  padding-bottom: 120px;
+}
+
+div div:nth-child(7) section article {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+div div:nth-child(7) section article a div:nth-child(1) {
+  position: relative;
+  height: 235px;
+  transition: all .25s linear;
+  opacity: 1;
+  overflow: hidden;
+}
+
+div div:nth-child(7) section article a div:nth-child(1):hover {
+  opacity: .5;
+}
+
+div div:nth-child(7) section article div:nth-child(1) span {
+  position: absolute;
+  top: 24px;
+  right: 34px;
+  font-size: 20px;
+  z-index: 2;
+}
+
+div div:nth-child(7) section article div:nth-child(2) h5 {
+  margin-top: 20px;
+  font-size: 11px;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+div div:nth-child(7) section article div .imgstatic {
+  width: 100%;
+  height: auto;
+  transform: scale(1);
+  transition: all .25s linear;
+}
+
+div div:nth-child(7) section article div:hover .imgstatic {
+  transform: scale(1.1);
+}
+
+div div:nth-child(7) section article div:nth-child(2) {
+  margin-top: 10px;
+}
+
+div div:nth-child(7) section article div:nth-child(2) h5 a {
+  margin-top: 20px;
+  font-size: 11px;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+div div:nth-child(7) section article div:nth-child(2) p a i {
+  margin-left: 5px;
+  font-size: 15px;
+  transition: all .15s linear;
+}
+
+div div:nth-child(7) section article div:nth-child(2) p a {
+  transition: all .15s linear;
+}
+
+div div:nth-child(7) section a:last-child {
+  margin-top: 20px;
+}
+
+div div:nth-child(7) section article div:nth-child(2) p a:hover, div div:nth-child(7) section article div:nth-child(2) p a:hover i {
+  color: #5b666b !important;
+}
+
+div div:nth-child(7) section article div:nth-child(1):hover span.oculto {
+  display: block;
+  opacity: 1;
+}
+
+.oculto {
+  display: none;
+  opacity: 0;
+}
+
+.desoculto {
+  display: block !important;
+  opacity: 1;
+}
+
+.secicon {
+  position: relative;
+  width: 100%;
+  height: auto;
+  display: none;
+}
+
+.secicon i {
+  position: absolute;
+  top: -5px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  font-size: 37px;
+}
+
+.divicon {
+  position: absolute;
+  top: -5px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  width: 100px !important;
+  background-color: black;
+  color: white;
+  font-size: 12px;
+  border-radius: 4px;
+}
+
+.divzoom {
+  position: fixed !important;
+  top: 0 !important;
+  left: 0;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  max-height: 100% !important;
+  opacity: 1;
+  transition-property: display, opacity;
+  transition-delay: 0, .24s;
+  transition-duration: 0, .25s;
+  z-index: 99999999999999;
+  background: url(../../assets/fancybox_overlay.png);
+}
+
+
+div div:nth-child(7) section article a div:hover.divzoom {
+  opacity: 1;
+}
+
+.dsd {}
+
+.zoomli {
+  position: relative;
+  top: 15%;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 43%;
+  text-align: center;
+}
+
+.zoomimg {
+  border: solid 4px #ffffff;
+  border-radius: 4px;
+}
+
+.zoomcerrar {
+  position: relative;
+  top: 15px;
+  left: 14px;
+  width: auto;
+  font-size: 25px;
+  border-radius: 100%;
+  border: solid 1.2px white;
+  z-index: 99;
+  -webkit-box-shadow: 0px 0px 6px 1.5px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 6px 1.5px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 6px 1.5px rgba(0, 0, 0, 0.75);
+}
+
+.div-padding2 {
+  padding: 120px 0;
+}
+
+.div_testimonials .row .col {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.carousel.carousel-slider .carousel-item {
+  padding: 100px 0;
+}
+
+.div_testimonials {
+  background: url(../../assets/testimonials-bg.jpg) center center no-repeat #333844;
+}
+
+.imgslide1, .imgslide2, .imgslide3 {
+  width: 82px;
+  height: 82px;
+  margin: 0 auto;
+}
+
+.imgslide1 {
+  background: url(../../assets/mani.jpg);
+  background-size: cover;
+}
+
+.imgslide2 {
+  background: url(../../assets/130.jpg);
+  background-size: cover;
+}
+
+.imgslide3 {
+  background: url(../../assets/avatar@2x.jpg);
+  background-size: cover;
+}
+
+.arrowright i, .arrowleft i {
+  color: rgba(255, 255, 255, 1)
+}
+
+.arrowright, .arrowleft {
+  width: 60px;
+  height: 60px;
+  position: absolute;
+  cursor: pointer;
+  transition: all .3s linear;
+}
+
+.arrowleft {
+  left: 80px;
+  top: 0;
+  bottom: 0;
+  margin: auto 0;
+  opacity: 0;
+  transform: translateX(-80px);
+}
+
+.arrowright {
+  right: 80px;
+  top: 0;
+  bottom: 0;
+  margin: auto 0;
+  opacity: 0;
+  transform: translateX(80px);
+}
+
+.carousel:hover .arrowright, .carousel:hover .arrowleft {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+.h2testimonials {
+  padding: 10px 0;
+  font-size: 40px !important;
+  font-weight: 300 !important;
+}
+
+.btn-large3 {
+  border-radius: 2px;
+  border: solid 0px;
+  padding-top: 10px;
+  padding-bottom: 40px;
+}
+
+.sectsignup {
+  height: 100%;
+}
+
+.sectionsignup {
+  margin-left: 27% !important;
+}
+
+.divsignup {
+  padding: 0;
+  margin: 0 auto 10px;
+  width: 80%;
+  height: 55px;
+  border-radius: 5px;
+  border: 1px solid #E6E9EA;
+  position: relative;
+}
+
+.inputsignup {
+  position: absolute;
+  left: 0;
+  padding-left: 68px !important;
+  width: 85.5% !important;
+  height: 100% !important;
+  margin: 0 auto 10px !important;
+  border-radius: 4px !important;
+  border: none !important;
+  font-size: 14px !important;
+  -webkit-box-shadow: 0px 0px 0px 1.5px rgba(103, 232, 255, 0.781);
+  -moz-box-shadow: 0px 0px 0px 1.5px rgba(103, 232, 255, 0.781);
+  box-shadow: 0px 0px 0px 1.5px rgba(103, 232, 255, 0.781) !important;
+}
+
+.iconsignup {
+  position: relative;
+  top: 20px;
+  margin-left: 5px !important;
+}
+
+.iconsignup::after {
+  content: "";
+  height: 30px;
+  width: 1px;
+  border-right: solid 1px #E6E9EA;
+  position: absolute;
+  top: 50%;
+  left: 38px;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 
 @media only screen and (max-width: 992px) {
@@ -259,6 +666,17 @@ div:nth-child(6) div article1 {
   }
   #pading {
     padding-left: 12px;
+  }
+}
+
+@keyframes animatediamond {
+  from, to {
+    -webkit-transform: translate(-50%, 0);
+    transform: translate(-50%, 0)
+  }
+  50% {
+    -webkit-transform: translate(-50%, 10px);
+    transform: translate(-50%, 10px)
   }
 }
 
